# mcp-feedback-enhanced

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  debug_websocket.html  electron-builder.json  feedback_ui.py  highlights.txt  pyproject.toml  pytest.ini  release_body.md  server.py  shrimp-rules.md  test_qt_gui.py  test_web_ui.py  web_ui.py
.github/workflows/: build-desktop.yml  publish.yml
RELEASE_NOTES/: CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CHANGELOG.zh-TW.md  README.md  SIMPLIFIED_WORKFLOW.md  template.md
RELEASE_NOTES/v2.2.1/: en.md  zh-CN.md  zh-TW.md
RELEASE_NOTES/v2.2.2/: en.md  zh-CN.md  zh-TW.md
RELEASE_NOTES/v2.2.3/: en.md  zh-CN.md  zh-TW.md
RELEASE_NOTES/v2.2.4/: en.md  zh-CN.md  zh-TW.md
RELEASE_NOTES/v2.2.5/: en.md  zh-CN.md  zh-TW.md
docs/: WORKFLOWS.md
docs/architecture/: README.md  api-reference.md  component-details.md  deployment-guide.md  interaction-flows.md  system-overview.md
docs/en/: cache-management.md
docs/en/ssh-remote/: browser-launch-issues.md
docs/zh-CN/: cache-management.md
docs/zh-TW/: cache-management.md
examples/: mcp-config-desktop.json  mcp-config-web.json
images/: attribution.txt
issues/: WSL環境預設使用WebUI修復.md  combinedSummaryContent-markdown-support.md
scripts/: cleanup_cache.py  release.py
src/mcp_feedback_enhanced/: __init__.py  __main__.py  debug.py  feedback_ui.py  i18n.py  server.py  test_mcp_enhanced.py  test_qt_gui.py  test_web_ui.py  web_ui.py
src/mcp_feedback_enhanced/desktop/: __init__.py  electron_manager.py  main.js  package.json  preload.js
src/mcp_feedback_enhanced/desktop/assets/: README.md  icon-placeholder.txt
src/mcp_feedback_enhanced/desktop_app/: desktop_app.py
src/mcp_feedback_enhanced/gui/: __init__.py  main.py
src/mcp_feedback_enhanced/gui/locales/en/: translations.json
src/mcp_feedback_enhanced/gui/locales/zh-CN/: translations.json
src/mcp_feedback_enhanced/gui/locales/zh-TW/: translations.json
src/mcp_feedback_enhanced/gui/models/: __init__.py  feedback.py
src/mcp_feedback_enhanced/gui/styles/: __init__.py  themes.py
src/mcp_feedback_enhanced/gui/tabs/: __init__.py  about_tab.py  command_tab.py  feedback_tab.py  settings_tab.py  summary_tab.py
src/mcp_feedback_enhanced/gui/utils/: __init__.py  shortcuts.py  utils.py
src/mcp_feedback_enhanced/gui/widgets/: __init__.py  image_preview.py  image_upload.py  styled_spinbox.py  switch.py  text_edit.py  timeout_widget.py
src/mcp_feedback_enhanced/gui/window/: __init__.py  command_executor.py  config_manager.py  feedback_window.py  tab_manager.py
src/mcp_feedback_enhanced/locales/: README.md
src/mcp_feedback_enhanced/locales/en/: translations.json
src/mcp_feedback_enhanced/locales/zh-CN/: translations.json
src/mcp_feedback_enhanced/locales/zh-TW/: translations.json
src/mcp_feedback_enhanced/static/: i18n.js
src/mcp_feedback_enhanced/templates/: feedback.html  index.html
src/mcp_feedback_enhanced/testing/: __init__.py  config.py  mcp_client.py  reporter.py  scenarios.py  utils.py  validators.py
src/mcp_feedback_enhanced/utils/: __init__.py  error_handler.py  memory_monitor.py  resource_manager.py
src/mcp_feedback_enhanced/web/: __init__.py  main.py
src/mcp_feedback_enhanced/web/locales/en/: translation.json
src/mcp_feedback_enhanced/web/locales/zh-CN/: translation.json
src/mcp_feedback_enhanced/web/locales/zh-TW/: translation.json
src/mcp_feedback_enhanced/web/models/: __init__.py  feedback_result.py  feedback_session.py
src/mcp_feedback_enhanced/web/routes/: __init__.py  main_routes.py
src/mcp_feedback_enhanced/web/static/css/: audio-management.css  prompt-management.css  session-management.css  styles.css
src/mcp_feedback_enhanced/web/static/js/: app.js  i18n.js
src/mcp_feedback_enhanced/web/static/js/modules/: auto-refresh-manager.js  connection-monitor.js  file-upload-manager.js  image-handler.js  logger.js  session-manager.js  settings-manager.js  tab-manager.js  ui-manager.js  utils.js  websocket-manager.js
src/mcp_feedback_enhanced/web/static/js/modules/audio/: audio-manager.js  audio-settings-ui.js
src/mcp_feedback_enhanced/web/static/js/modules/notification/: notification-settings.js
src/mcp_feedback_enhanced/web/static/js/modules/prompt/: prompt-input-buttons.js  prompt-manager.js  prompt-modal.js  prompt-settings-ui.js
src/mcp_feedback_enhanced/web/static/js/modules/session/: session-data-manager.js  session-details-modal.js  session-ui-renderer.js
src/mcp_feedback_enhanced/web/static/js/modules/utils/: dom-utils.js  status-utils.js  time-utils.js
src/mcp_feedback_enhanced/web/templates/: feedback.html  index.html
src/mcp_feedback_enhanced/web/templates/components/: image-upload.html  status-indicator.html
src/mcp_feedback_enhanced/web/utils/: __init__.py  browser.py  compression_config.py  compression_monitor.py  network.py  port_manager.py  session_cleanup_manager.py
static/: style.css
templates/: feedback.html
tests/: conftest.py  test_error_handler.py  test_resource_manager.py
tests/fixtures/: test_data.py
tests/helpers/: mcp_client.py  test_utils.py
tests/integration/: test_i18n_integration.py  test_mcp_workflow.py  test_web_integration.py
tests/unit/: test_error_handler.py  test_gzip_compression.py  test_i18n_core.py  test_memory_monitor.py  test_port_manager.py  test_resource_manager.py  test_session_cleanup.py  test_web_ui.py
